fix section title font being too small

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -570,7 +570,7 @@ article content and headlines */
 .section-title__big-title {
   display: inline-block;
   margin: 0 auto;
-  font-size: 1.4rem;
+  font-size: 1.5rem;
   font-weight: bolder;
 }
 
